// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BccToggle > renders a label 1`] = `
"<div class="flex items-center gap-2">
  <div class="p-toggleswitch p-component clickable" style="position: relative;" label="Test label" withicon="false" loading="false" wastoggled="false" usectx="false" data-pc-name="toggleswitch" pc0="" data-pc-section="root" data-p-checked="false" data-p-disabled="false" data-p=""><input type="checkbox" role="switch" class="p-toggleswitch-input" aria-checked="false" data-pc-section="input">
    <div class="p-toggleswitch-slider" data-pc-section="slider" data-p="">
      <div class="p-toggleswitch-handle" data-pc-section="handle" data-p=""></div>
    </div>
  </div><label class="text-body-md">Test label</label>
</div>"
`;

exports[`BccToggle > renders a toggle in on or off state 1`] = `
"<div class="flex items-center gap-2">
  <div class="p-toggleswitch p-component clickable" style="position: relative;" withicon="false" loading="false" wastoggled="false" usectx="false" data-pc-name="toggleswitch" pc0="" data-pc-section="root" data-p-checked="false" data-p-disabled="false" data-p=""><input type="checkbox" role="switch" class="p-toggleswitch-input" aria-checked="false" data-pc-section="input">
    <div class="p-toggleswitch-slider" data-pc-section="slider" data-p="">
      <div class="p-toggleswitch-handle" data-pc-section="handle" data-p=""></div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`BccToggle > renders a toggle in on or off state 2`] = `
"<div class="flex items-center gap-2">
  <div class="p-toggleswitch p-component clickable" style="position: relative;" withicon="false" loading="false" wastoggled="false" usectx="false" data-pc-name="toggleswitch" pc0="" data-pc-section="root" data-p-checked="false" data-p-disabled="false" data-p=""><input type="checkbox" role="switch" class="p-toggleswitch-input" aria-checked="false" data-pc-section="input">
    <div class="p-toggleswitch-slider" data-pc-section="slider" data-p="">
      <div class="p-toggleswitch-handle" data-pc-section="handle" data-p=""></div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;
